Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.6.2
-
None
-
Mac OS X 10.6.8
Description
I have built a Qt version (4.8.1 and 4.8.4) with -prefix and ran 'make install'.
By default it creates Qt as a framework.
But when I want to add it to Qt Creator I get an error saying: "Qt version is not properly installed, please run make install"
If I create an empty directory named "include" in the Qt directory I can use the Qt version without a problem.
/qt/4.8.4/bin/qmake -query
QT_INSTALL_PREFIX:/qt/4.8.4
QT_INSTALL_DATA:/qt/4.8.4
QT_INSTALL_DOCS:/qt/4.8.4/doc
QT_INSTALL_HEADERS:/qt/4.8.4/include
QT_INSTALL_LIBS:/qt/4.8.4/lib
QT_INSTALL_BINS:/qt/4.8.4/bin
...