QtSupport: Fix check for installed qt for framework builds of qt 4.8

Task-number: QTCREATORBUG-8839

Change-Id: If41eecca6e20c2766a63b576e2329b4c9fd5e5e7
Reviewed-by: Eike Ziller <eike.ziller@digia.com>